fixed example to be default
fixed example to be default

--- a/example/index.html
+++ b/example/index.html
@@ -31,7 +31,7 @@
 <script>
 	
 	window.onload = function(){
-		var options = {audioType:'webkit',autoPlay:false};
+		var options = {autoPlay:false};
 		
 		var dp = new IllyPlayer('movieHolder','wonder_video.mp4','wonder_audio.m4a',options);
 		
